--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "cross-env NODE_ENV=development webpack --hide-modules",
     "test:unit": "vue-cli-service test:unit",
     "build:prod": "cross-env NODE_ENV=production webpack --hide-modules",
-    "dev": "webpack --mode development --env NODE_ENV=development --watch --hide-modules",
+    "dev": "set NODE_ENV=development && webpack --mode development --watch --hide-modules",
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@toast-ui/editor": "^3.1.1",
     "@vueuse/core": "^6.3.3",
     "axios": "^0.21.4",
+    "dotenv-webpack": "^7.0.3",
     "element-plus": "^1.1.0-beta.12",
     "feather-icons": "^4.28.0",
     "fuse.js": "^6.4.6",
