--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recorder",
   "version": "0.1.2",
   "private": true,
-  "description": "chrome extension to quick and exact search",
+  "description": "Chrome extension for knowledge manage: store cheat sheets and links, browser sessions.",
   "author": "Mikhail Tatarkov",
   "scripts": {
     "build": "cross-env NODE_ENV=development webpack --hide-modules",
@@ -91,6 +91,6 @@
     "windicss-webpack-plugin": "^1.4.8",
     "zip-webpack-plugin": "^3.0.0"
   },
-  "homepage": "https://github.com/flipwordit/quickexact#readme",
-  "license": "MIT"
+  "homepage": "https://github.com/Smartoteka/cheatsheets_chrome",
+  "license": "Apache 2.0"
 }
