--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,8 +5,9 @@
   "manifest_version": 2,
   "author": "Tatarkov M",
   "icons": {
-    "48": "images/smart_48.png",
-    "128": "images/smart_128.png"
+    "48": "images/icon_blue_48.png",
+    "64": "images/icon_blue_64.png",
+    "128": "images/icon_blue_128.png"
   },
   "background": {
     "page": "background/background.html"
