--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recorder",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "description": "Chrome extension for knowledge manage: store cheat sheets and links, browser sessions.",
   "author": "Mikhail Tatarkov",
@@ -15,13 +15,16 @@
     "@toast-ui/editor": "^3.1.1",
     "@vueuse/core": "^6.3.3",
     "axios": "^0.21.4",
+    "big-json": "^3.1.0",
     "dotenv-webpack": "^7.0.3",
+    "elasticlunr": "^0.9.5",
     "element-plus": "^1.1.0-beta.12",
     "feather-icons": "^4.28.0",
     "fuse.js": "^6.4.6",
     "geopattern": "^1.2.3",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "lunr-languages": "^1.9.0",
     "luxon": "^2.0.2",
     "ua-parser-js": "^0.7.28",
     "uuid": "^8.3.2",
