--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@toast-ui/editor": "^3.1.1",
+    "@vueform/multiselect": "^2.3.3",
     "@vueuse/core": "^6.3.3",
     "axios": "^0.21.4",
     "big-json": "^3.1.0",
